Started working on web interface

--- a/app/blueprints/site/views/base.html
+++ b/app/blueprints/site/views/base.html
@@ -1,6 +1,3 @@
-{% extends "header.html" %}
-
-{% block content %}
-{% endblock %}
-</div>
-{% include "footer.html" %}
+{% include 'header.html' %}
+    <h1>Hello, world!</h1>
+{% include 'footer.html' %}
