--- a/app/blueprints/site/views/footer.html
+++ b/app/blueprints/site/views/footer.html
@@ -1,16 +1,12 @@
-<footer>
-    <p>&copy; 2023 Eduard Miclos</p>
-</footer>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/esm/popper-base.js"
-        integrity="sha384-eBjK9XWc+UiApvwhqT/RKtyr3s8xWpw1sTURZmQbZKpl8omcWbAfl+bNu3CqjKck"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
-        integrity="sha384-T2H5wC7V+5rl5gZ7Oiky6pMJo7V77oRT+iHz/z7x0xKLLZTEq1qU6p4U6HLdJf1j"
-        crossorigin="anonymous"></script>
-{% block scripts %}
-{% endblock %}
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
+
+  <footer>
+    © 2023 Copyright:
+    <a class="text-dark" href="https://www.linkedin.com/in/eduard-miclo%C8%99-3094941b5/">Eduard Miclos</a>
+  </footer>
 </html>
