--- a/app/blueprints/site/views/header.html
+++ b/app/blueprints/site/views/header.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-150">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -37,4 +37,4 @@
       </div>
     </nav>
   </head>
-  <body>
+  <body class="d-flex flex-column h-150">
