Added admin page
Added admin page containg the followingȘ

- "manage users" section: a table (DataTables) with all the users and the following
2 actions: "edit" and "delete" user.
Underneath, a button for adding new users.

- "manage footage" section: a list with all the footages. By clicking on an element
from the list, a video player modal opens and the user can view the footage.# Please enter the commit message for your changes. Lines starting

--- a/app/blueprints/site/views/profile.html
+++ b/app/blueprints/site/views/profile.html
@@ -4,6 +4,29 @@
         <div class="text mt-4  ">
             <h1 >Administrează contul</h1>
         </div>
+        <div class="text mt-4  ">
+            <h1 >Administrează contul</h1>
+        </div>
+
+        <div class="text mt-4  ">
+            <h1 >Administrează contul</h1>
+        </div>
+        <div class="text mt-4  ">
+            <h1 >Administrează contul</h1>
+        </div>
+        <div class="text mt-4  ">
+            <h1 >Administrează contul</h1>
+        </div>
+        <div class="text mt-4  ">
+            <h1 >Administrează contul</h1>
+        </div>
+        <div class="text mt-4  ">
+            <h1 >Administrează contul</h1>
+        </div>
+
+        <div class="text mt-4  ">
+            <h1 >Administrează contul</h1>
+        </div>
         <hr/>
     <div>
     <div class="row">
