--- a/app/controllers/static/style.css
+++ b/app/controllers/static/style.css
@@ -1,3 +1,10 @@
 body {
     zoom: 130%;
 }
+
+#video-player {
+    max-width: 100%;
+    max-height: 80vh;
+    margin: 0 auto;
+    display: block;
+}
