--- a/app/blueprints/site/views/header.html
+++ b/app/blueprints/site/views/header.html
@@ -4,11 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css">
 
     <title>A-Eye</title>
 
@@ -21,13 +21,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto ms-auto">
             <li class="nav-item ">
-              <a class="nav-link" href="#"><i class="fas fa-home me-2">&nbsp;</i>Panou principal</a>
+              <a class="nav-link" href="/"><i class="fas fa-home me-2">&nbsp;</i>Panou principal</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-file-video me-2">&nbsp;</i>Istoric</a>
+              <a class="nav-link" href="/history"><i class="fas fa-file-video me-2">&nbsp;</i>Istoric</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-user me-2">&nbsp;</i>Profil</a>
+              <a class="nav-link" href="/profile"><i class="fas fa-user me-2">&nbsp;</i>Profil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin"><i class="fas fa-cogs me-2">&nbsp;</i>Administrare</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><i class="fas fa-sign-out-alt me-2">&nbsp;</i>Delogare</a>
