--- a/app/blueprints/site/views/login.html
+++ b/app/blueprints/site/views/login.html
@@ -15,6 +15,8 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
     </div>
     <div class="col-md-6" align="center">
       <img src="static/images/camera.png" alt="Image" class="img-fluid" width="50%">
