Updated admin page
Added the "manage surveillance camera" section. The user with admin
privileges will be able to see all the active cameras, update them, edit them, remove them
and even add new cameras.

--- a/app/blueprints/site/views/footer.html
+++ b/app/blueprints/site/views/footer.html
@@ -12,8 +12,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <h4>Ce este A-Eye?</h4>
-          <p>A-Eye reprezintă un sistem de supraveghere video cu înregistrarea, detecția și stocarea inteligentă a comportamentelor violente
+          <h4>Ce reprezintă A-Eye?</h4>
+          <p>A-Eye este un sistem de supraveghere video cu înregistrarea, detecția și stocarea inteligentă a comportamentelor violente
             în vederea facilitării procesului de investigare și soluționare a evenimentelor cu risc ridicat de criminalitate.
           </p>
         </div>
