--- a/app/blueprints/site/views/admin.html
+++ b/app/blueprints/site/views/admin.html
@@ -3,10 +3,16 @@
   <div class="container mt-4">
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" data-toggle="tab" href="#manage-users">Administrare utilizatori</a>
+        <a class="nav-link active" data-toggle="tab" href="#manage-users">Utilizatori</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#manage-footage">Administrare înregistrări<picture>
+        <a class="nav-link" data-toggle="tab" href="#manage-footage">Înregistrări<picture>
+          <source media="(min-width: )" srcset="">
+          <img src="" alt="">
+        </picture></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" href="#manage-surveillance-cameras">Camere de supraveghere<picture>
           <source media="(min-width: )" srcset="">
           <img src="" alt="">
         </picture></a>
@@ -22,6 +28,7 @@
               <tr>
                 <th>Nume</th>
                 <th>Email</th>
+                <th>Număr de telefon</th>
                 <th>Acțiuni</th>
               </tr>
             </thead>
@@ -30,9 +37,18 @@
               <tr>
                 <td>John Doe</td>
                 <td>john@example.com</td>
+                <td>0747 628 536</td>
                 <td>
-                  <button class="btn btn-primary">Modifică</button>
-                  <button class="btn btn-danger">Șterge</button>
+                  <div class="actions-list">
+                    <div class="clickable icon-action">
+                      <i class="fas fa-edit"></i>
+                      <span>Editează</span>
+                    </div>
+                    <div class="clickable icon-action"> 
+                      <i class="fas fa-trash-alt"></i>
+                      <span>Șterge</span>
+                    </div>
+                </div>
                 </td>
               </tr>
               <!-- Add more rows for other users -->
@@ -99,7 +115,7 @@
                   </div>
                 </td>
                 <td class="col-md-6">
-                  <div class="footage-actions">
+                  <div class="actions-list">
                     <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
                       <i class="fas fa-eye"></i>
                       <span>Vizionează</span>
@@ -127,7 +143,7 @@
                   </div>
                 </td>
                 <td class="col-md-6">
-                  <div class="footage-actions">
+                  <div class="actions-list">
                     <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
                       <i class="fas fa-eye"></i>
                       <span>Vizionează</span>
@@ -155,7 +171,7 @@
                   </div>
                 </td>
                 <td class="col-md-6">
-                  <div class="footage-actions">
+                  <div class="actions-list">
                     <div class="clickable icon-action" onclick="openVideoModal('static/moment.mp4')">
                       <i class="fas fa-eye"></i>
                       <span>Vizionează</span>
@@ -199,6 +215,113 @@
           </div>
         </div>
     </div>
+
+    <div class="tab-pane fade" id="manage-surveillance-cameras">
+      <h3>Administrare camere de supraveghere</h3>
+        <div class="table-responsive">
+          <table class="table table-bordered" id="surveillance-camera-table">
+            <thead>
+              <tr>
+                <th>Denumire</th>
+                <th>Descriere</th>
+                <th>Data inițierii</th>
+                <th>Up-time</th>
+                <th>Last update</th>
+                <th>Acțiuni</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <i class="fas fa-video"></i>&nbsp;
+                  <b>CAMERA_DE_ZI_1</b>
+                </td>
+                <td>Funcționează în camera de zi.</td>
+                <td>2023-05-01, 16:22</td>
+                <td>18 ore</td>
+                <td>2023-05-01, 16:22</td>
+                <td class="col-md-1">
+                  <div class="actions-list">
+                    <div class="clickable icon-action text-success"> 
+                      <i class="fa fa-refresh"></i>
+                      <span>Actualizează</span>
+                    </div>
+                    <div class="clickable icon-action">
+                      <i class="fas fa-edit"></i>
+                      <span>Editează</span>
+                    </div>
+                    <div class="clickable icon-action"> 
+                      <i class="fas fa-trash-alt"></i>
+                      <span>Deconectează</span>
+                    </div>
+                </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+  
+        <button class="btn btn-success mt-2" data-toggle="modal" data-target="#add-camera-modal">Adăugare cameră de supraveghere</button>
+  
+        <!-- Add new camera modal -->
+        <div class="modal fade" id="add-camera-modal" tabindex="-1" role="dialog" aria-labelledby="addCameraModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="addCameraModalLabel">Adăugare cameră de supraveghere</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <!-- Form fields for adding a new user -->
+                <form>
+                  <div class="form-group">
+                    <label for="name">Nume</label>
+                    <input type="text" class="form-control" id="name" placeholder="Introduceți numele">
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Introduceți adresa de email">
+                  </div>
+                  <div class="form-group">
+                    <label for="phone">Număr de telefon</label>
+                    <input type="tel" class="form-control" id="phone" placeholder="Introduceți numărul de telefon">
+                  </div>
+                  <!-- Add more form fields as needed -->
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Închide</button>
+                <button type="button" class="btn btn-primary">Salvează</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+      <!-- Video player modal -->
+      <div class="modal fade" id="video-player-modal" tabindex="-1" role="dialog" aria-labelledby="videoPlayerModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="videoPlayerModalLabel">Vizualizare înregistrare cu potențial violent</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <!-- Video player component -->
+              <video id="video-player" controls>
+                Your browser does not support the video tag.
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+    
   </div>
 </div>
 {% include 'footer.html' %}
@@ -207,16 +330,15 @@
   $(document).ready(function() {
     $('#users-table').DataTable({
       paging: true,
-      lengthMenu: [10, 25, 50, 75, 100],
+      lengthChange: false,
       pageLength: 10,
       language: {
         "sEmptyTable":    "Niciun rezultat găsit",
-        "sInfo":          "Afișate de la _START_ la _END_ din _TOTAL_ înregistrări",
-        "sInfoEmpty":     "Afișate de la 0 la 0 din 0 înregistrări",
+        "sInfo":          "",
+        "sInfoEmpty":     "",
         "sInfoFiltered":  "(filtrate dintr-un total de _MAX_ înregistrări)",
         "sInfoPostFix":   "",
         "sInfoThousands": ",",
-        "sLengthMenu":    "Afișează _MENU_ înregistrări pe pagină",
         "sLoadingRecords": "Se încarcă...",
         "sProcessing":    "Se procesează...",
         "sSearch":        "Caută:",
@@ -235,6 +357,35 @@
     });
 
     var footageTable = $('#footage-table').DataTable({
+      paging: true,
+      lengthChange: false,
+      pageLength: 10,
+      language: {
+        "sEmptyTable":    "Niciun rezultat găsit",
+        "sInfo":          "",
+        "sInfoEmpty":     "",
+        "sInfoFiltered":  "(filtrate dintr-un total de _MAX_ înregistrări)",
+        "sInfoPostFix":   "",
+        "sInfoThousands": ",",
+        "sLengthMenu":    "Afișează _MENU_ înregistrări pe pagină",
+        "sLoadingRecords": "Se încarcă...",
+        "sProcessing":    "Se procesează...",
+        "sSearch":        "Caută:",
+        "sZeroRecords":   "Niciun rezultat găsit",
+        "oPaginate": {
+          "sFirst":    "Prima pagină",
+          "sLast":     "Ultima pagină",
+          "sNext":     "Pagina următoare",
+          "sPrevious": "Pagina anterioară"
+        },
+        "oAria": {
+          "sSortAscending":  ": activează pentru a sorta coloana în ordine crescătoare",
+          "sSortDescending": ": activează pentru a sorta coloana în ordine descrescătoare"
+        }
+      }
+    });
+
+    var surveillanceCameraTable = $('#surveillance-camera-table').DataTable({
       paging: true,
       lengthChange: false,
       pageLength: 10,
