--- a/app/controllers/static/style.css
+++ b/app/controllers/static/style.css
@@ -46,3 +46,7 @@ body {
     zoom: 0.9; /* Adjust the zoom level as needed */
     width: 100%;
   }
+
+  #surveillance-camera-table {
+    zoom: 0.8;
+  }
