Added href to header logo

--- a/app/blueprints/site/views/admin.html
+++ b/app/blueprints/site/views/admin.html
@@ -237,8 +237,103 @@
                   <i class="fas fa-video"></i>&nbsp;
                   <b>CAMERA_DE_ZI_1</b>
                 </td>
-                <td>Activă</td>
+                <td>
+                  <span class="font-weight-bold text-success">
+                    ACTIVĂ
+                  </span>
+                </td>
                 <td>Funcționează în camera de zi.</td>
+                <td>2023-05-01, 16:22</td>
+                <td>18 ore</td>
+                <td>2023-05-01, 16:22</td>
+                <td class="col-md-1">
+                  <div class="actions-list">
+                    <div class="clickable icon-action text-success"> 
+                      <i class="fa fa-refresh"></i>
+                      <span>Actualizează</span>
+                    </div>
+                    <div class="clickable icon-action">
+                      <i class="fas fa-edit"></i>
+                      <span>Editează</span>
+                    </div>
+                    <div class="clickable icon-action"> 
+                      <i class="fas fa-trash-alt"></i>
+                      <span>Deconectează</span>
+                    </div>
+                </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <i class="fas fa-video"></i>&nbsp;
+                  <b>CAMERA_DE_ZI_2</b>
+                </td>
+                <td>
+                  <span class="font-weight-bold text-info">
+                    SE ACTUALIZEAZĂ
+                  </span>
+              </td>
+                <td>Funcționează în camera de zi.</td>
+                <td>2023-05-01, 16:22</td>
+                <td>18 ore</td>
+                <td>2023-05-01, 16:22</td>
+                <td class="col-md-1">
+                  <div class="actions-list">
+                    <div class="clickable icon-action text-success"> 
+                      <i class="fa fa-refresh"></i>
+                      <span>Actualizează</span>
+                    </div>
+                    <div class="clickable icon-action">
+                      <i class="fas fa-edit"></i>
+                      <span>Editează</span>
+                    </div>
+                    <div class="clickable icon-action"> 
+                      <i class="fas fa-trash-alt"></i>
+                      <span>Deconectează</span>
+                    </div>
+                </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <i class="fas fa-video"></i>&nbsp;
+                  <b>GRADINA_1</b>
+                </td>
+                <td>
+                  <span class="font-weight-bold text-danger">
+                    OPRITĂ
+                  </span>
+                </td>
+                <td>Funcționează în grădină.</td>
+                <td>2023-05-01, 16:22</td>
+                <td>18 ore</td>
+                <td>2023-05-01, 16:22</td>
+                <td class="col-md-1">
+                  <div class="actions-list">
+                    <div class="clickable icon-action text-success"> 
+                      <i class="fa fa-refresh"></i>
+                      <span>Actualizează</span>
+                    </div>
+                    <div class="clickable icon-action">
+                      <i class="fas fa-edit"></i>
+                      <span>Editează</span>
+                    </div>
+                    <div class="clickable icon-action"> 
+                      <i class="fas fa-trash-alt"></i>
+                      <span>Deconectează</span>
+                    </div>
+                </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <i class="fas fa-video"></i>&nbsp;
+                  <b>BUCATARIE_1</b>
+                </td>
+                <td>
+                  <span class="font-weight-bold text-success">ACTIVĂ</span>
+                </td>
+                <td>Funcționează în bucătărie.</td>
                 <td>2023-05-01, 16:22</td>
                 <td>18 ore</td>
                 <td>2023-05-01, 16:22</td>
