--- a/app/blueprints/site/views/header.html
+++ b/app/blueprints/site/views/header.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar py-3 navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="static/images/aeye-navbar.png" width=250 alt="A-Eye"></a>
+        <a class="navbar-brand" href="/"><img src="static/images/aeye-navbar.png" width=250 alt="A-Eye"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
