--- a/app/blueprints/site/views/header.html
+++ b/app/blueprints/site/views/header.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="/admin"><i class="fas fa-cogs me-2">&nbsp;</i>Administrare</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-sign-out-alt me-2">&nbsp;</i>Delogare</a>
+              <a class="nav-link" href="/login"><i class="fas fa-sign-out-alt me-2">&nbsp;</i>Delogare</a>
             </li>
           </ul>
         </div>
