--- a/app/application/blueprints/site/views/admin.html
+++ b/app/application/blueprints/site/views/admin.html
@@ -69,6 +69,10 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
+              
+              <form method="POST" action="/admin/delete-user">
+              <input type="hidden" name="user_id" id="deleted-user-id" value="">
+
               <div class="modal-body">
                 <div class="d-flex flex-column align-items-center mb-3">
                   <i class="fas fa-trash text-danger fa-2x"></i>
@@ -90,7 +94,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header bg-success text-white">
-                <h5 class="modal-title" id="addUserModalLabel">Informații utilizator nou</h5>
+                <h5 class="modal-title" id="userInfoModalLabel">Informații utilizator nou</h5>
                 <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -102,6 +106,33 @@
                 </div>
                 <p class="mb-0 h5">Următoarea parolă a fost generată:</p>
                 <p class="font-weight-bold h4">{{ pwd }}</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-success" data-dismiss="modal">În regulă!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+    
+        {% endif %}
+
+
+        {% if deleted_user %}
+
+        <div class="modal" id="deleted-user-info-modal" tabindex="-1" role="dialog" aria-labelledby="deletedUserInfoModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header bg-success text-white">
+                <h5 class="modal-title" id="deletedUserInfoModalLabel">Informații utilizator șters</h5>
+                <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body text-center">
+                <div class="d-flex flex-column align-items-center mb-3">
+                  <i class="fas fa-check-circle text-success fa-3x"></i>
+                  <strong class="mt-2 h5">Utilizatorul a fost șters cu succes!</strong>
+                </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-success" data-dismiss="modal">În regulă!</button>
@@ -124,8 +155,7 @@
               <div class="modal-body">
                 <!-- Form fields for adding a new user -->
                 <form method="POST" action="/admin/add-user">
-                  {{ form.hidden_tag() }}
-                  
+
                   <div class="form-group">
                     <label for="firstname">Nume</label>
                     {{ form.firstname(class="form-control") }}
@@ -499,27 +529,23 @@
 </script>
 {% endif %}
 
+{% if deleted_user %}
+<script>
+  $(document).ready(function() {
+    $('#deleted-user-info-modal').modal('show');
+  })
+</script>
+{% endif %}
+
 <script>
   $(document).ready(function() {
     var userIdToDelete;
   
-    // Event listener for delete button click
     $('.btn-delete-user').on('click', function() {
       userIdToDelete = $(this).data('user-id');
+      $("#deleted-user-id").val(userIdToDelete);
       
-      // Show the confirmation modal
       $('#delete-user-modal').modal('show');
-    });
-    
-    // Event listener for confirm deletion button click
-    $('#confirm-delete-btn').on('click', function() {
-      if (userIdToDelete) {
-        // Perform the deletion action using the stored user ID
-        console.log(`se sterge userul ${userIdToDelete}`)
-        
-        // Hide the confirmation modal
-        $('#delete-user-modal').modal('hide');
-      }
     });
   })
 </script>
